objects/xdo_dc_Universal_360_Child__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Universal_360_Id__c</fullName>
        <label>Universal 360 Id</label>
        <referenceTo>xdo_dc_universal_360__c</referenceTo>
        <relationshipName>Universal_Childs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Universal_Record_Id__c</fullName>
        <label>Link Any Record Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Universal 360 Child</label>
    <nameField>
        <label>Universal Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universal 360 Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>